# mono

./: .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING.LIB  ChangeLog  DependencyVersion.pm  Dockerfile  LICENSE  MARTIN-TEST  Makefile.am  Makefile.am.coverage  Microsoft Patent Promise.TXT  NEWS  NuGet.config  PrepareAndroidSDK.pl  PrepareAndroidSDK.pm  PrepareBB10NDK.pl  PrepareBB10NDK.pm  PrepareSTVNDK.pl  PrepareSTVNDK.pm  PrepareTizenNDK.pl  README  README-VisualStudio.rst  README.md  README.rst  SDKDownloader.pm  THIRD-PARTY-NOTICES.TXT  Third Party Notices.md  Unity-build.md  autogen.sh  (+44 more)
acceptance-tests/: .gitignore  Makefile  Makefile.am  README.md  SUBMODULES.json  coreclr.mk  microbench-perf.sh.in  microbench.mk  ms-test-suite.mk  profiler-stress.mk  roslyn.mk  versions.mk  versions.py  versions.rb
data/: .cvsignore  .gitignore  ChangeLog  DefaultWsdlHelpGenerator.aspx  Makefile.am  README  aspnetwebstack.pc.in  browscap.ini  cecil.pc.in  config.in  dotnet.pc.in  dotnet35.pc.in  machine.config  mono-2.pc.in  mono-cairo.pc.in  mono-lineeditor.pc.in  mono-nunit.pc.in  mono-options.pc.in  mono.d  mono.pc.in  mono.supp  mono.web.pc.in  monodoc.pc.in  monosgen-2.pc.in  reactive.pc.in  smcs.pc.in  system.web.extensions.design_1.0.pc.in  system.web.extensions_1.0.pc.in  system.web.mvc.pc.in  system.web.mvc2.pc.in  system.web.mvc3.pc.in  wcf.pc.in  xbuild12.pc
docs/: .gitattributes  .gitignore  ChangeLog  Makefile.am  README  abc-removal.txt  aot-compiler.txt  api-style.css  assembly-bundle  call-sites.txt  current-api  docs.make  documented  doxyfile  embedded-api  exception-handling.txt  exceptions  exdoc  file-share-modes  gc-issues  gc-variables-in-c  generic-sharing  glossary.txt  historic-mono-branches.txt  ignore  internal-calls  ir-desc  jit-debug  jit-imt  jit-regalloc  jit-thoughts  jit-trampolines  magic.diff  mbas  memory-management.txt  mini-doc.txt  mini-porting.txt  mono-error.md  mono-file-formats.config  mono-file-formats.source  (+24 more)
eglib/: CMakeLists.txt  ChangeLog  Makefile.am  autogen.sh  config.h.cmake  configure.ac
libgc/: .cvsignore  .gitattributes  .gitignore  AmigaOS.c  BCC_MAKEFILE  CMakeLists.txt  ChangeLog  EMX_MAKEFILE  MacOS.c  Makefile.am  Makefile.direct  Makefile.dj  NT_MAKEFILE  NT_STATIC_THREADS_MAKEFILE  NT_THREADS_MAKEFILE  OS2_MAKEFILE  PCR-Makefile  README.Mono  README.QUICK  SMakefile.amiga  WCC_MAKEFILE  acinclude.m4  aix_irix_threads.c  allchblk.c  alloc.c  alpha_mach_dep.S  autogen.sh  backgraph.c  blacklst.c  checksums.c  config.sub  configure.ac  configure.host  configure.in  darwin_stop_world.c  dbg_mlc.c  depcomp  digimars.mak  dyn_load.c  finalize.c  (+42 more)
llvm/: .gitignore  Makefile  Makefile.am  SUBMODULES.json  build.mk  build_llvm_config.sh  build_llvm_msbuild.bat  build_llvm_msbuild.sh
man/: ChangeLog  Makefile.am  al.1  aotprof-tool.1  aprofutil.1  caspol.1  cccheck.1  ccrewrite.1  cert-sync.1  cert2spc.1  certmgr.1  chktrust.1  cilc.1  crlupdate.1  csharp.1  disco.1  dtd2xsd.1  gacutil.1  genxs.1  httpcfg.1  ilasm.1  illinkanalyzer.1  lc.1  macpack.1  makecert.1  man.xml  manpages.source  mbas.1  mconfig.1  mcs.1  mdassembler.1  mdb2ppdb.1  mdcs2ecma.1  mdnormalizer.1  mdoc-assemble.1  mdoc-export-html.1  mdoc-export-msxdoc.1  mdoc-update.1  mdoc-validate.1  mdoc.1  (+40 more)
mono/: CMakeSettings.json  Makefile.am  gshared  w32subset.h
msvc/: .gitignore  ChangeLog  Makefile.am  README  build-all.vcxproj  build-external-btls.bat  build-external-btls.vcxproj  build-external-llvm.vcxproj  build-init.vcxproj  build-install.vcxproj  build-package.vcxproj  clrcompression.targets  clrcompression.targets.filters  eglib-common.targets  eglib-common.targets.filters  eglib-unity.targets  eglib-unity.targets.filters  eglib-unity.vcxproj  eglib-unity.vcxproj.filters  eglib-win32.targets  eglib-win32.targets.filters  eglib.vcproj  eglib.vcxproj  eglibarm64.vcxproj  genmdesc.vcproj  genmdesc.vcxproj  il2cpp.props  install.bat  libgc.vcproj  libgc.vcxproj  libgcbdwgc.vcxproj  libgcbdwgc.vcxproj.filters  libgcmonosgen.vcxproj  libmini-arch.targets  libmini-common.targets  libmini-common.targets.filters  libmini-llvm.targets  libmini-netcore.targets  libmini-netcore.targets.filters  libmini-unity.targets  (+96 more)
netcore/: .gitignore  CoreFX.issues.rsp  CoreFX.issues_interpreter.rsp  CoreFX.issues_linux.rsp  CoreFX.issues_windows.rsp  Makefile  Makefile.am  README.md  build.sh  build.targets  corefx-restore.csproj  corefx-test-assets.xml  dlzips.py  excludes-System.Net.Http.Functional.Tests.rsp  excludes-System.Reflection.Tests.rsp  excludes-System.Runtime.Extensions.Tests.rsp  excludes-System.Runtime.InteropServices.Tests.rsp  excludes-System.Runtime.Tests.rsp  init-tools.sh  roslyn-restore.csproj  roslyn.version.props  runtime.nuspec  unzip.py  xunit-summary.py
runtime/: .cvsignore  .gitattributes  .gitignore  Makefile.am  mono-test.sh  mono-uninstalled.pc.in  mono-wrapper.in  monodis-wrapper.in  semdel-wrapper.in
samples/: .cvsignore  .gitignore  Makefile.am
scripts/: .cvsignore  .gitattributes  .gitignore  CMakeLists.txt  Makefile.am  al.in  babysitter  cert2spc.in  certmgr.in  chktrust.in  cilc.in  commits-to-changelog.py  csc-dim.in  csc.in  csharp.bat.in  csharp.in  csi.in  disco.in  dmcs.in  dtd2xsd  gacutil.in  gacutil2  genxs.in  get-cygwin-deps.sh  gmcs.in  ilasm.in  launch.c  mac-sdk-package.sh  makecert.in  mbas.in  mcs.in  mdassembler  mdvalidater  mod.in  mono-configuration-crypto.in  mono-find-provides.in  mono-find-requires.in  mono-heapviz  mono-nunit.pc.in  mono-package-runtime  (+35 more)
support/: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README.zlib  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  dirent.c  errno.c  fakepoll.h  fcntl.c  fstab.c  grp.c  gzio.c  infback.c  inffast.c  inffast.h  inflate.c  inflate.h  inftrees.c  inftrees.h  mac-reachability.c  macros.c  map-icalls.h  map-impl.h  map.c  map.h  mph.h  nl.c  nl.h  old-map.c  old-map.h  pwd.c  serial-custom.c  (+34 more)
(+82112 files in other folders)
